--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,10 @@
 }
 
 body{
-  background: rgb(3, 27, 43);
+  /* background: rgb(3, 27, 43); */
+}
+
+.landing{
+  background: linear-gradient(rgba(0, 2, 22, 0.829), rgba(2, 11, 20, 0.89)), url('./assets/images/voter.jpg') no-repeat center fixed;
+  background-size: cover;
 }
