--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body{
   background: linear-gradient(rgba(0, 2, 22, 0.829), rgba(2, 11, 20, 0.89)), url('./assets/images/voter.jpg') no-repeat center fixed;
   background-size: cover;
 }
+
+.results_table tr:nth-child(even){
+  background: rgb(144, 144, 240);
+}
