--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ body{
   background-size: cover;
 }
 
+.hero{
+  background: linear-gradient(rgba(0, 2, 22, 0), rgba(2, 11, 20, 0.479)), url('./assets/images/hero2.Avif') no-repeat center fixed;
+  background-size: cover;
+}
+
 .results_table tr:nth-child(even){
   background: rgb(144, 144, 240);
 }
