--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 }
 
 
+
 .landing{
   background: linear-gradient(rgba(0, 2, 22, 0.829), rgba(2, 11, 20, 0.89)), url('./assets/images/voter.jpg') no-repeat center;
   background-size: cover;
@@ -21,6 +22,11 @@
   background-attachment: fixed;
 }
 
+.tab{
+  background: url('./assets/images/flag2.png') no-repeat center;
+  background-size: contain;
+  background-attachment: fixed;
+}
 .results_table tr:nth-child(even){
   background: rgb(144, 144, 240);
 }
